# cloud-assignment-02

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  toSendToLeo
.github/workflows/: ci.yml
docs/: README.md  architecture.md
editor-avgwordlength/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod
editor-avgwordlength/api/: api_integration_test.go  handler.go
editor-avgwordlength/cmd/: server.go
editor-charcount/: .dockerignore  .env  .gitignore  Dockerfile  README.md  charcount.js  package-lock.json  package.json  server.js
editor-charcount/src/: charcount.js  server.js
editor-charcount/test/: charcount.test.js  server.test.js  (+1 more)
editor-database/: Dockerfile  package-lock.json  package.json  server.js
editor-frontend/: .gitignore  Dockerfile  package-lock.json  package.json
editor-frontend 2/: .dockerignore  package.json
editor-palindromedetection/: .dockerignore  .env  .gitignore  Dockerfile  main  package.json  test_http_server  test_palindrome
editor-palindromedetection_ignore/: server  test_integration
editor-punctuationcount/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
editor-punctuationcount/.github/workflows/: ci.yml
editor-punctuationcount/src/: main.rs  punctuationcount.rs
editor-punctuationcount/test/: test_main.rs  test_punctuationcount.rs
editor-reverse-proxy/: Dockerfile  README.md  config.json  proxy.py  requirements.txt
editor-vowelcount/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
editor-vowelcount/.github/workflows/: ci.yml
editor-vowelcount/src/: app.py  vowelcount.py
editor-vowelcount/test/: test_app.py  test_vowelcount.py
editor-wordcount/: .dockerignore  .env  .gitignore  Dockerfile  README.md  composer.json
monitoring-service/: Dockerfile  monitoring-service.js  package-lock.json  package.json
(+44 files in other folders)
