[package]
name = "editor-punctuationcount"
version = "1.0.0"
authors = ["Oscar Wilson <owilson07@qub.ac.uk>"]
edition = "2021"
description = "Microservice for counting punctuation marks in text."
license = "MIT"
readme = "README.md"

[dependencies]
actix-web = "4.9"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }


[dev-dependencies]
actix-rt = "2.5"

[[bin]]
name = "editor-punctuationcount"
path = "src/main.rs"